src/objects/ServiceResource.object
<CustomObject>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Online_Offset__c</fullName>
        <description>Online offset in minutes</description>
        <label>Online Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Speed__c</fullName>
        <label>Travel Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_ServiceResources</fullName>
        <filterScope>Everything</filterScope>
        <label>All Service Resources</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceResources</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Resources</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>